# hypr-setting

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  release-installer.sh  release.sh  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
packaging/: .SRCINFO  PKGBUILD  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backups.rs  config.rs  hyprctl.rs  lib.rs  main.rs  models.rs  services.rs  watcher.rs
src/components/: empty-state.tsx  global-search.tsx  navigation.ts  page-header.tsx  sidebar.tsx  toast.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx  slot.tsx  switch.tsx  textarea.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: animations.tsx  appearance.tsx  backups.tsx  dashboard.tsx  developer.tsx  keybindings.tsx  monitors.tsx  startup.tsx  themes.tsx  wallpapers.tsx  window-rules.tsx
src/store/: settings-store.ts
src/types/: hypr.ts
